# IrregPCA

./: LICENSE  README.md  pyproject.toml
src/irregpca/: __init__.py  core.py  estimate.py  model.py  utils.py
